kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  selector:
    app: api-gateway
  type: NodePort
  ports:
    - port: 80
      targetPort: http-server
